# quest-ai

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build-wheel.yml
benchmarks/: path.py  path_on_empty_grid.rs
rust/: lib.rs  path.rs  pos.rs  pos_map.rs  priority.rs  world.rs
src/janlukas/: __init__.py  ai.py  old.py  rush.py  state.py
src/lib/: lib.rs  path.rs
tests/: path_test.py  plot_path.py  run.py
