[package]
name = "janlukas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "janlukas"
path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
approx = "0.5.1"
nalgebra = "0.32.1"
ndarray = "0.15.6"
numpy = "0.18.0"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
