[package]
name = "janlukas"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
name = "janlukas._janlukas"

[lib]
name = "janlukas"
path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.32.1"
ndarray = "0.15.6"
numpy = "0.18.0"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
