[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"

[project]
name = "janlukas"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "quest"
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = "tests"
addopts = """
--strict-config
--strict-markers
-v
"""
filterwarnings = [
    "error",
]

[tool.ruff]
line-length = 88
select = ["B", "E", "F", "I", "S", "T", "FBT003", "RUF100"]
ignore = ["E741", "E742", "E743",  # do not use names ‘l’, ‘O’, or ‘I’; they are not a problem with a proper font
          ]
extend-exclude = [".*","__pycache__","build","dist"]
fixable = ["I001"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # asserts are fine in tests

[tool.ruff.isort]
known-first-party = ["janlukas"]
